--- a/src/resources/assets/sgcraft/lang/en_US.lang
+++ b/src/resources/assets/sgcraft/lang/en_US.lang
@@ -137,8 +137,10 @@ sgcraft.gui.configurator.label.defaultAdmin=Default Admin
 sgcraft.gui.configurator.label.access=Access
 sgcraft.gui.configurator.label.iris=Iris
 sgcraft.gui.configurator.label.admin=Admin
-sgcraft.gui.configurator.label.playerCanDestroyGate=Player can destroy stargate
+sgcraft.gui.configurator.label.playerCanDestroyPlayerGate=Player can destroy player stargate
+sgcraft.gui.configurator.label.playerCanDestroyGeneratedGate=Player can destroy generated stargate
 sgcraft.gui.configurator.label.displayGateAddress=Display Gate Address
+sgcraft.gui.configurator.label.isGenerated=World Generated Stargate
 sgcraft.gui.pdd.label.personalDialerDevice=Personal Dialer Device
 sgcraft.gui.pdd.label.availableAddresses=Available Addresses
 sgcraft.gui.pdd.label.warning=Don't close PDD until wormhole connects...
