--- a/src/resources/assets/sgcraft/lang/en_US.lang
+++ b/src/resources/assets/sgcraft/lang/en_US.lang
@@ -58,6 +58,7 @@ message.sgcraft:changesSaved=Changes Saved!
 message.sgcraft:gateLocationSaved=Gate location saved in configurator!
 message.sgcraft:configuratorLink=Link to Stargate created!
 message.sgcraft:playerAccessToDenied=Insufficient player access permission at destination
+message.sgcraft:AddressingError=Addressing Error %s
 
 tile.sgcraft:zpm_interface_cart.name=ZPM Interface Cart
 tile.sgcraft:zpm_console.name=ZPM Console
